Fixed the styling problem (mobile view has extra space)

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,6 +3,7 @@ body {
     margin:0;
     padding:0;
     height:100vh;
+    width:100vw;
     background: rgb(44,71,103);
     background: radial-gradient(circle, rgba(44,71,103,1) 1%, rgba(46,46,112,1) 11%, 
                 rgba(61,61,150,1) 16%, rgba(41,41,99,1) 24%, rgba(19,18,37,1) 69%);
@@ -12,8 +13,6 @@ body {
 }
 
 #analyser_render{
-    margin-bottom: 1%;
-    background-size: contain;
     position: absolute;
     bottom:0;
     width:100vw;
@@ -28,16 +27,18 @@ body {
 }
 
 #controlBar {
+    padding-top: 1%;
     text-align: center;
     margin:0;
     background-color: rgb(46, 46, 46);
 }
 
 #vol, #playlist, #nowPlaying, #options_bar {
-    margin-top: 2%;
+    margin-top: 2vw;
     height:30px;
     border-radius: 5px;
     margin-right: 2%;
+    margin-left:2%;
     font-weight: 900;
 }
 
@@ -48,8 +49,6 @@ body {
 
 #playlist {
     width:80vw;
-    margin-left:50%;
-    transform: translateX(-50%);
     max-width:400px;
     min-width: 250px;
     transition: 0.3s;
